--- a/dev/index.html
+++ b/dev/index.html
@@ -3,12 +3,20 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>A Gulp-based Template for HTML, CSS, Sass, and ES6 JS</title>
+   <title>Desire</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  //= template/header.html
-  //= template/footer.html
+
+<div class="wrapper">
+    //= template/header.html
+    //= template/main.html
+    //= template/footer.html
+</div>
+
 <script src="scripts/app.js" defer></script>
 </body>
 </html>
