--- a/dev/page.html
+++ b/dev/page.html
@@ -13,7 +13,20 @@
 
 <div class="wrapper">
     //= template/header.html
-    //= template/main.html
+    <main class="main">
+
+        <div class="breadcrumbs">
+            <div class="container">
+                <ul class="breadcrumbs__list">
+                    <li class="breadcrumbs__item">
+                        <a class="breadcrumbs__link" href="#">Home</a>
+                    </li>
+                    <li class="breadcrumbs__item">
+                        <a class="breadcrumbs__link" href="#">About</a>
+                    </li>
+                </ul>
+
+    </main>
     //= template/footer.html
 </div>
 
