add gallery-page and contact-page

--- a/dev/page.html
+++ b/dev/page.html
@@ -25,7 +25,8 @@
                         <a class="breadcrumbs__link" href="#">About</a>
                     </li>
                 </ul>
-
+            </div>
+        </div
     </main>
     //= template/footer.html
 </div>
